--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost:9999/schooltest?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/schooltest
+spring.datasource.username=postgres
 spring.datasource.password=MyNewPass
-#spring.datasource.data=file:data.sql
 
 
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.properties.hibernate.dilect=org.hibernate.dialect.MySQL5DBDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dilect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.show-sql=true
 server.port=8084
+
+
+
+api.v1=/api/v1/
 
