ManyToMany issues was fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dilect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.show-sql=true
 server.port=8084
-
+server.address=192.168.0.183
 
 
 api.v1=/api/v1/
