Student ManyToMany issue was fixed via Hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/schooltest
 spring.datasource.username=postgres
-spring.datasource.password=MyNewPass
+spring.datasource.password=salom
 
 
 
