--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=salom
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dilect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.show-sql=true
 server.port=8084
